--- a/src/App.css
+++ b/src/App.css
@@ -100,9 +100,29 @@ a, button {
     flex-direction: column;
     gap: 20px;
     position: relative;
+
+    .options{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+    .send-box{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        input{
+            padding: 10px;
+        }
+        button{
+            color: white;
+        }
+    }
 }
 
 .button {
+    width: 300px;
     font-size: 20px;
     padding: 10px 20px;
     margin: 20px;
